--- a/back/config/config.env
+++ b/back/config/config.env
@@ -1,8 +1,4 @@
 PORT=4000
 NODE_ENV=DEVELOPMENT
 
-<<<<<<< HEAD
-DB_LOCAL_URI = mongodb://localhost:27017/mapleshop
-=======
-DB_LOCAL_URI = mongodb://localhost:27017/mapleshop
->>>>>>> 82ead59e64177e7ff1c2ba4fb49253be586e69b3
+DB_LOCAL_URI = mongodb://localhost:27017/nvshop
