--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mapleshop",
+  "name": "nvshop",
   "version": "1.0.0",
   "description": "Tienda virtual de ropa deportiva",
   "main": "server.js",
@@ -10,14 +10,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/MapleShop/MapleShop.git"
+    "url": "git+https://https://github.com/Nicoriveros/nvshop.git"
   },
-  "author": "Maple",
+  "author": "NV",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/MapleShop/MapleShop/issues"
+    "url": "https://github.com/Nicoriveros/nvshop/issues"
   },
-  "homepage": "https://github.com/MapleShop/MapleShop#readme",
+  "homepage": "https://github.com/Nicoriveros/nvshop#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
