--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "start": "node back/server.js",
     "dev": "SET NODE_ENV=DEVELOPMENT& nodemon back/server",
-    "prod": "SET NODE_ENV=PRODUCTION& nodemon back/server"
+    "prod": "SET NODE_ENV=PRODUCTION& nodemon back/server",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false && NODE_OPTIONS=--openssl-legacy-provider && npm install --force --prefix front && npm run build --prefix front"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://https://github.com/Nicoriveros/nvshop.git"
+    "url": "git+https://github.com/MapleShop/MapleShop.git"
   },
   "author": "NV",
   "license": "ISC",
@@ -21,9 +22,11 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
+    "cloudinary": "^1.32.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.5",
     "node-fetch": "^3.2.10",
